Removed RandomAccessStream interface, made it a class.